fix overflow

--- a/styles/_media-queries.scss
+++ b/styles/_media-queries.scss
@@ -6,7 +6,6 @@ $br: 700px;
 @media only screen and (min-width: $br){
   body {
     background-image: url(../images/bg-intro-desktop.png);
-    overflow: hidden;
   }
 
   main {
