--- a/styles/_resets.scss
+++ b/styles/_resets.scss
@@ -2,14 +2,14 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  padding: 0;
-  border: 0;
 }
 
 body {
   min-height: 100vh;
   display: grid;
   place-items: center;
+  padding: 0;
+  margin: 0;
 
   font-size: 62.50%;
   font-family: $poppins;
